# CommonC

./: .gitignore  LICENSE  README.md  gen_container_types.rb  gen_container_types.sh  gen_simd.rb  generic_imp.rb  generic_n.rb  meson.build
Common/: Common-Prefix.pch  Common.h
Common.xcodeproj/: project.pbxproj
CommonC/: Alignment.h  Allocator.c  Allocator.h  Array.c  Array.h  Assertion.h  Assertion_Private.h  Base.h  BigInt.c  BigInt.h  BigIntFast.h  BitSets.h  BitTricks.h  Bits.h  BitsTemplate.h  Buffer.h  CCString.c  CCString.h  CCStringEnumerator.h  CFAllocator.c  CallbackAllocator.h  CircularEnumerable.c  CircularEnumerable.h  Collection.c  Collection.h  CollectionArray.c  CollectionArray.h  CollectionEnumerator.h  CollectionFastArray.c  CollectionInterface.h  CollectionList.c  CollectionList.h  CollectionTypes.h  Common.h  CommonC-Info.plist  CommonC-Prefix.pch  CommonC.c  Comparator.h  ConcurrentArray.c  ConcurrentArray.h  (+165 more)
CommonC-iOSTests/: CommonC_iOSTests.m
CommonC.xcodeproj/: project.pbxproj
CommonC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CommonC/CommonC/: Allocator.c  Allocator.h  Array.c  Array.h  Assertion.h  BitTricks.c  BitTricks.h  CCHashMapSeparateChainingArrayDataOrientedAll.c  CCString.c  CCString.h  CCStringEnumerator.h  CFAllocator.c  CallbackAllocator.h  Collection.c  Collection.h  CollectionArray.c  CollectionArray.h  CollectionEnumerator.h  CollectionFastArray.c  CollectionFastArray.h  CollectionInterface.h  CollectionList.c  CollectionList.h  CollectionTypes.h  Common.h  CommonC-Info.plist  Comparator.h  ConcurrentGarbageCollector.c  ConcurrentGarbageCollector.h  ConcurrentGarbageCollectorInterface.h  ConcurrentQueue.c  ConcurrentQueue.h  CustomFormatSpecifiers.c  CustomFormatSpecifiers.h  CustomInputFilters.c  Data.c  Data.h  DataBuffer.c  DataBuffer.h  DataInterface.h  (+63 more)
CommonC/CommonC-iOS/: CommonC-iOS.h
CommonC/CommonC.xcodeproj/: project.pbxproj
CommonC/CommonCTests/: AllocatorTests.h  AllocatorTests.m  Array.m  ArrayTests.m  BitTricksTests.h  BitTricksTests.m  CollectionArrayTests.m  CollectionListTests.m  CollectionTests.h  CollectionTests.m  CommonCTests-Info.plist  ConcurrentQueueTests.m  DataBufferTests.m  DataTests.h  DataTests.m  DictionaryTests.m  FileSystemTests.m  FileTests.h  FileTests.m  HashMapSeparateChainingArrayTests.m  HashMapTests.m  LoggingTests.h  MemoryAllocationTests.h  MemoryAllocationTests.m  OrderedCollectionTests.m  QueueTests.m  StringTests.m  TaskQueueTests.m  TaskTests.m  Vector2DAVXTests.m  Vector2DSSE2Tests.m  Vector2DSSE4_1Tests.m  Vector2DSSETests.m  Vector2DSSSE3Tests.m  Vector2DTests.m  Vector3DTests.m  Vector4DTests.m  Vectorized2DAVX.m  Vectorized2DAVXTests.m  Vectorized2DSSE.m  (+23 more)
CommonCTests/: AlignedAllocatorTests.m  AllocatorTests.m  ArrayTests.m  BigIntTests.m  BitSetsTests.m  BitTricksTests.m  CollectionArrayTests.m  CollectionFastArrayTests.m  CollectionListTests.m  CollectionTests.h  CollectionTests.m  CompileTimeSortTests.m  ConcurrentBufferTests.m  ConcurrentCircularBufferTests.m  ConcurrentGarbageCollectorTests.m  ConcurrentIDPoolTests.m  ConcurrentIndexBuffer.m  ConcurrentIndexMapTests.m  ConcurrentPoolTests.m  ConcurrentQueueTests.m  ConcurrentSharedResourceTests.m  ConcurrentSwapBufferTests.m  ConsecutiveIDGeneratorTests.m  ContainerTests.m  DataContainerTests.m  DataTests.h  DecimalTests.m  DictionaryHashMapTests.m  DictionaryTests.h  DictionaryTests.m  EnumTests.m  EnumerableTests.m  FileHandleTests.h  FileHandleTests.m  FileSystemTests.h  FileSystemTests.m  FileTests.h  FileTests.m  HashMapSeparateChainingArrayDataOrientedAllTests.m  HashMapSeparateChainingArrayDataOrientedHash.m  (+57 more)
CommonGL/CommonGL/: CCPixelData.h  CCPixelData.m  Calling.h  Colour.h  Colour.m  ColourComponent.h  ColourComponent.m  ColourFormat.h  ColourFormat.m  Common.h  Context.h  Context.m  Debug.h  Debug.m  Default_Private.h  Defined.h  Display.h  Display.m  Extensions.h  Info.plist  MissingFunctions.h  MissingFunctions.m  PixelData.h  PixelData.m  PixelDataGenerator.h  PixelDataGenerator.m  PixelDataStatic.h  PixelDataStatic.m  Portability.h  Portability.m  RenderLoop.h  State.h  (+11 more)
CommonGL/CommonGL.xcodeproj/: project.pbxproj
(+26 files in other folders)
